--- a/edu.html
+++ b/edu.html
@@ -592,7 +592,7 @@
             <button class="tab" onclick="showTab('senior')">🎓 SMA</button>
             <button class="tab" onclick="showTab('bachelor')">🏥 S1 Kedokteran</button>
             <button class="tab" onclick="showTab('master')">🔬 S2 Spesialis</button>
-            <button class="tab" onclick="showTab('certifications')">📜 Sertifikasi</button>
+            <button class="tab" onclick="showTab('master')">🔬 S2 Spesialis</button>
         </div>
 
         <!-- SEKOLAH DASAR -->
